--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>lichter.io</title>
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title></title>
+    <meta name="author" content="Alexander Lichter">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Lichter.io</title>
   </head>
   <body>
     <div id="app"></div>
