Add og meta information

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="author" content="Alexander Lichter">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Lichter.io</title>
+
     <link rel="apple-touch-icon-precomposed" sizes="57x57" href="static/apple-touch-icon-57x57.png" />
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="static/apple-touch-icon-114x114.png" />
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="static/apple-touch-icon-72x72.png" />
@@ -20,6 +21,7 @@
     <link rel="icon" type="image/png" href="static/favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="static/favicon-16x16.png" sizes="16x16" />
     <link rel="icon" type="image/png" href="static/favicon-128.png" sizes="128x128" />
+
     <meta name="application-name" content="&nbsp;"/>
     <meta name="msapplication-TileColor" content="#FFFFFF" />
     <meta name="msapplication-TileImage" content="static/mstile-144x144.png" />
@@ -27,6 +29,11 @@
     <meta name="msapplication-square150x150logo" content="static/mstile-150x150.png" />
     <meta name="msapplication-wide310x150logo" content="static/mstile-310x150.png" />
     <meta name="msapplication-square310x310logo" content="static/mstile-310x310.png" />
+
+    <meta property="og:title" content="Lichter.io" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://lichter.io" />
+    <meta property="og:image" content="https://lichter.io/static/favicon-128.png"/>
 
   </head>
   <body>
