Add og:description tag

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
     <meta name="msapplication-square310x310logo" content="static/mstile-310x310.png" />
 
     <meta property="og:title" content="Lichter.io" />
+    <meta property="og:description"
+          content="The personal website and online CV of Alexander Lichter, a passioned developer" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://lichter.io" />
     <meta property="og:image" content="https://lichter.io/static/favicon-128.png"/>
