--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <meta property="og:title" content="Lichter.io"/>
     <meta property="og:description"
-          content="The personal website and online CV of Alexander Lichter, a passioned developer"/>
+          content="The personal website and online CV of Alexander Lichter, an impassioned developer"/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://lichter.io"/>
     <meta property="og:image" content="https://lichter.io/static/favicon-128.png"/>
