--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="author" content="Alexander Lichter">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Lichter.io</title>
+    <meta name="description"
+          content="The personal website and online CV of Alexander Lichter, an impassioned developer">
+    <title>Lichter.io - Alexander Lichter</title>
 
     <link rel="apple-touch-icon-precomposed" sizes="57x57" href="static/apple-touch-icon-57x57.png"/>
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="static/apple-touch-icon-114x114.png"/>
@@ -29,7 +31,7 @@
     <meta name="msapplication-wide310x150logo" content="static/mstile-310x150.png"/>
     <meta name="msapplication-square310x310logo" content="static/mstile-310x310.png"/>
 
-    <meta property="og:title" content="Lichter.io"/>
+    <meta property="og:title" content="Lichter.io - Alexander Lichter"/>
     <meta property="og:description"
           content="The personal website and online CV of Alexander Lichter, an impassioned developer"/>
     <meta property="og:type" content="website"/>
